--- a/validation/src/main/resources/org/syaku/tutorials/spring/i18n/message.properties
+++ b/validation/src/main/resources/org/syaku/tutorials/spring/i18n/message.properties
@@ -13,6 +13,10 @@ text.field.hobby = \uCDE8\uBBF8
 
 text.field.value = \uAC12
 
+text.valid.GeneralPattern.UPPER_ALPHABET_NUMBER_UNDERSCORE = \uB300\uBB38\uC790 \uC601\uBB38\uACFC \uC22B\uC790 \uADF8\uB9AC\uACE0 _ \uB9CC \uC785\uB825\uD558\uC138\uC694.
+text.valid.GeneralPattern.UPPER_ALPHABET_NUMBER = \uB300\uBB38\uC790 \uC601\uBB38\uACFC \uC22B\uC790\uB9CC \uC785\uB825\uD558\uC138\uC694.
+text.valid.GeneralPattern.UPPER_ALPHABET = \uB300\uBB38\uC790 \uC601\uBB38\uC73C\uB85C \uC785\uB825\uD558\uC138\uC694.
+
 text.valid.GeneralPattern.ALPHABET_NUMBER_UNDERSCORE = \uC601\uBB38\uACFC \uC22B\uC790 \uADF8\uB9AC\uACE0 _ \uB9CC \uC785\uB825\uD558\uC138\uC694.
 text.valid.GeneralPattern.ALPHABET_NUMBER = \uC601\uBB38\uACFC \uC22B\uC790\uB9CC \uC785\uB825\uD558\uC138\uC694.
 text.valid.GeneralPattern.ALPHABET = \uC601\uBB38\uC73C\uB85C \uC785\uB825\uD558\uC138\uC694.
@@ -20,7 +24,7 @@ text.valid.GeneralPattern.KOREAN_NUMBER = \uD55C\uAE00\uACFC \uC22B\uC790\uB9CC 
 text.valid.GeneralPattern.KOREAN = \uD55C\uAE00\uB85C \uC785\uB825\uD558\uC138\uC694.
 text.valid.GeneralPattern.NUMBER = \uC22B\uC790\uB85C \uC785\uB825\uD558\uC138\uC694.
 text.valid.GeneralPattern.USER_ID = \uC601\uBB38 \uC18C\uBB38\uC790\uB85C \uC2DC\uC791\uD558\uC5EC \uC22B\uC790\uC640 \uC601\uBB38 \uC18C\uBB38\uC790 \uADF8\uB9AC\uACE0 _ \uBB38\uC790\uB9CC \uC785\uB825\uD558\uC138\uC694.
-text.valid.GeneralPattern.PRIMARY_IDX = \uC720\uD6A8\uD55C \uAC12\uC774 \uC544\uB2D9\uB2C8\uB2E4.
+text.valid.GeneralPattern.CRONTAB = cron expression \uC73C\uB85C \uC785\uB825\uD558\uC138\uC694.
 
 text.valid.DateTime = \uB0A0\uC9DC\uAC00 \uC720\uD6A8\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4. (\uD615\uC2DD: {format})
 text.valid.Between = {values} \uC911\uC5D0 \uAC12\uC744 \uC785\uB825\uD558\uC138\uC694.
